# opencv_cpp_practice

./: .gitignore  CMakeLists.txt
BasicImageOperations/: CMakeLists.txt  CreateImage.cpp
GettingStartWithImage/: CMakeLists.txt  README.md
GettingStartWithImage/include/GettingStartWithImage/: ImageAsMatrix.hpp
GettingStartWithImage/src/: ImageAsMatrix.cpp
GettingStartWithImage/test/: CMakeLists.txt
GettingStartWithImage/test/src/: ImageAsMatrixTests.cpp
